Fix vertical alignment between repl prompt and input in webkit browsers

--- a/backend/sass/common.blocks/_repl.scss
+++ b/backend/sass/common.blocks/_repl.scss
@@ -62,7 +62,6 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: baseline;
 }
 
 .repl__prompt {
@@ -75,6 +74,11 @@
     border: none;
     padding: 0 5px;
     background: transparent;
+
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
 }
 
 .repl__input:focus {
